update base url

--- a/_site.yml
+++ b/_site.yml
@@ -3,6 +3,7 @@ title: "A gentle intro to Package Management in R"
 description: |
   A gentle intro to Package Management in R
 output_dir: "_site"
+base_url:: https://ryjohnson09.github.io/Rememblog/
 navbar:
   right:
     - text: "Home"
